# weather-intel-bot

./: .cache.sqlite  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  intent.py  llm.py  main.py  problem_statement.txt  pyproject.toml  render.yaml  task.md  weather.py
static/: index.html
