[project]
name = "14th-feb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "numpy>=2.4.2",
    "openmeteo-requests>=1.7.5",
    "panda>=0.3.1",
    "pandas>=3.0.1",
    "requests-cache>=1.3.0",
    "retry-requests>=2.0.0",
    "uvicorn>=0.41.0",
]
